@@ -4,8 +4,10 @@ import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import uk.gov.hmcts.reform.fpl.enums.CaseRole;
 import uk.gov.hmcts.reform.fpl.enums.RepresentativeRole;
 import uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences;
+import uk.gov.hmcts.reform.fpl.enums.SolicitorRole;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.Colleague;
 import uk.gov.hmcts.reform.fpl.model.Recipient;
@@ -17,12 +19,12 @@ import uk.gov.hmcts.reform.fpl.model.interfaces.WithSolicitor;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.POST;
@@ -52,7 +54,7 @@ public class RepresentativesInbox {
             .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
-    public HashSet<String> getRepresentativeEmailsFilteredByRole(CaseData caseData,
+    public Set<String> getRepresentativeEmailsFilteredByRole(CaseData caseData,
                                                                  RepresentativeServingPreferences preference,
                                                                  List<RepresentativeRole.Type> roles) {
         return caseData.getRepresentativesByServedPreference(preference)
@@ -63,23 +65,44 @@ public class RepresentativesInbox {
             .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
-    public HashSet<String> getRespondentSolicitorEmails(CaseData caseData,
-                                                              RepresentativeServingPreferences preference) {
+    public Set<String> getRespondentSolicitorEmails(CaseData caseData,
+                                                        RepresentativeServingPreferences preference) {
         return caseData.getAllRespondents().stream()
             .filter(respondent -> shouldSend(preference, respondent))
             .map(this::extractEmailsForSolicitorAndColleagues)
-            .flatMap(Collection::stream).collect(Collectors.toList())
+            .flatMap(Collection::stream).toList()
             .stream()
             .filter(StringUtils::isNotBlank)
             .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
-    public HashSet<String> getChildrenSolicitorEmails(CaseData caseData,
-                                                            RepresentativeServingPreferences preference) {
+    public Set<String> getRepresentedSolicitorEmails(CaseData caseData, CaseRole caseRole,
+                                                  RepresentativeServingPreferences preference) {
+        List<Element<WithSolicitor>> locatedChild = Stream.of(caseRole)
+            .map(CaseRole::formattedName)
+            .map(SolicitorRole::from)
+            .filter(Optional::isPresent)
+            .map(Optional::get)
+            .map(s -> s.getRepresentedPerson(caseData))
+            .filter(Optional::isPresent)
+            .map(Optional::get)
+            .toList();
+
+        return locatedChild.stream()
+            .filter(child -> shouldSend(preference, child))
+            .map(this::extractEmailsForSolicitorAndColleagues)
+            .flatMap(Collection::stream).toList()
+            .stream()
+            .filter(StringUtils::isNotBlank)
+            .collect(Collectors.toCollection(LinkedHashSet::new));
+    }
+
+    public Set<String> getChildrenSolicitorEmails(CaseData caseData,
+                                                  RepresentativeServingPreferences preference) {
         return caseData.getAllChildren().stream()
             .filter(child -> shouldSend(preference, child))
             .map(this::extractEmailsForSolicitorAndColleagues)
-            .flatMap(Collection::stream).collect(Collectors.toList())
+            .flatMap(Collection::stream).toList()
             .stream()
             .filter(StringUtils::isNotBlank)
             .collect(Collectors.toCollection(LinkedHashSet::new));
